--- a/index.html
+++ b/index.html
@@ -13,26 +13,34 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #050505;
+            background-color: #000;
             color: #fff;
             font-family: 'Inter', system-ui, -apple-system, sans-serif;
         }
         canvas {
             display: block;
         }
+        #root {
+            width: 100vw;
+            height: 100vh;
+        }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "@google/genai": "https://esm.sh/@google/genai@1.3.2",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.36.0"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
+    <!-- No Vercel/Produção, precisamos garantir que o arquivo seja carregado como módulo -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
